--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Dashboard.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Dashboard.fxml
@@ -7,16 +7,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="518.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prog3projekthotelreservierungssystem.Dashboard">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.DashboardController">
     <children>
         <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard">
             <font>
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView layoutX="48.0" layoutY="90.0" prefHeight="400.0" prefWidth="622.0" />
-        <Button layoutX="487.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="77.0" text="Cansel" />
-        <ChoiceBox layoutX="209.0" layoutY="34.0" prefWidth="150.0" />
+        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="400.0" prefWidth="622.0" />
+        <Button fx:id="cancelBtn" layoutX="487.0" layoutY="34.0" mnemonicParsing="false" onAction="#onClickCancelBooking" prefHeight="25.0" prefWidth="77.0" text="Cancel" />
+        <ChoiceBox fx:id="bookingChoiceBox" layoutX="209.0" layoutY="34.0" prefWidth="150.0" />
     </children>
 </AnchorPane>
