--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addGuest.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addGuest.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="418.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="418.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddGuestController">
     <children>
         <Label layoutX="45.0" layoutY="23.0" text="Add Guest">
             <font>
@@ -34,17 +34,17 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <TextField layoutX="229.0" layoutY="152.0" promptText="Last Name" />
-        <TextField layoutX="24.0" layoutY="266.0" promptText="name@example.com" />
-        <TextField layoutX="24.0" layoutY="382.0" promptText="Tel-number" />
-        <TextField layoutX="29.0" layoutY="152.0" promptText="First Name" />
+        <TextField fx:id="lastNameTxtfield" layoutX="229.0" layoutY="152.0" promptText="Last Name" />
+        <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="266.0" promptText="name@example.com" />
+        <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="382.0" promptText="Tel-number" />
+        <TextField fx:id="firstNameTxtfield" layoutX="29.0" layoutY="152.0" promptText="First Name" />
         <Label layoutX="271.0" layoutY="215.0" text="B-date">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <DatePicker layoutX="217.0" layoutY="266.0" />
-        <Button layoutX="98.0" layoutY="491.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="222.0" text="Add Guest">
+        <DatePicker fx:id="dateChooser" layoutX="217.0" layoutY="266.0" />
+        <Button fx:id="addGuestBtn" layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="31.0" prefWidth="222.0" text="Add Guest">
             <font>
                 <Font size="15.0" />
             </font>
