--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddMitarbeiterController">
     <children>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="381.0" prefWidth="632.0" style="-fx-background-color: C39746;" VBox.vgrow="ALWAYS">
             <children>
@@ -21,36 +22,36 @@
                         <Font size="18.0" />
                     </font>
                 </Text>
-                <TextField layoutX="20.0" layoutY="89.0" />
-                <Text layoutX="345.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="128.13671875">
+                <TextField fx:id="lastNameTxtfield" layoutX="20.0" layoutY="89.0" />
+                <Text layoutX="345.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
-                <TextField layoutX="345.0" layoutY="89.0" />
+                <TextField fx:id="firstNameTxtfield" layoutX="345.0" layoutY="89.0" />
                 <Text layoutX="20.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="email" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
-                <TextField layoutX="20.0" layoutY="165.0" />
-                <Text layoutX="20.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="phone number" wrappingWidth="128.13671875">
+                <TextField fx:id="emailTxtfield" layoutX="20.0" layoutY="165.0" />
+                <Text layoutX="20.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel-Number" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
-                <TextField layoutX="20.0" layoutY="252.0" />
+                <TextField fx:id="telefonNrTxtfield" layoutX="20.0" layoutY="252.0" />
                 <Text layoutX="345.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="birth date" wrappingWidth="128.13671875">
                     <font>
                         <Font size="18.0" />
                     </font>
                 </Text>
-                <TextField layoutX="345.0" layoutY="165.0" />
-                <Button layoutX="535.0" layoutY="329.0" mnemonicParsing="false" text="Add ">
+                <Button fx:id="addMitarbeiterBtn" layoutX="535.0" layoutY="329.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" text="Add ">
                     <font>
                         <Font size="22.0" />
                     </font>
                 </Button>
+            <DatePicker fx:id="dateChooser" layoutX="345.0" layoutY="165.0" prefHeight="26.0" prefWidth="150.0" />
             </children>
         </AnchorPane>
     </children>
