--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/gastsDashboard.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/gastsDashboard.fxml
@@ -3,14 +3,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<?import javafx.scene.control.TextField?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1025.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="679.0" prefWidth="1025.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.gastsDashboardController">
     <children>
         <AnchorPane prefHeight="685.0" prefWidth="1332.0" style="-fx-background-color: C39746;">
             <children>
@@ -19,26 +18,26 @@
                         <Font size="22.0" />
                     </font>
                 </Text>
-                <TableView layoutX="7.0" layoutY="57.0" prefHeight="480.0" prefWidth="1016.0">
+                <TableView fx:id="tabelView" layoutX="7.0" layoutY="57.0" prefHeight="480.0" prefWidth="1016.0">
                     <columns>
-                        <TableColumn prefWidth="143.0" text="Name" />
-                        <TableColumn prefWidth="197.0" text="Last Name" />
-                        <TableColumn prefWidth="201.0" text="Phone Number" />
-                        <TableColumn minWidth="1.0" prefWidth="289.0" text="Email" />
-                        <TableColumn prefWidth="185.0" text="Birth Date" />
+                        <TableColumn fx:id="nameColumn" prefWidth="143.0" text="Name" />
+                        <TableColumn fx:id="lastNameColumn" prefWidth="197.0" text="Last Name" />
+                        <TableColumn fx:id="telefonNrColumn" prefWidth="201.0" text="Phone Number" />
+                        <TableColumn fx:id="emailColumn" minWidth="1.0" prefWidth="289.0" text="Email" />
+                        <TableColumn fx:id="birthdateColumn" prefWidth="185.0" text="Birth Date" />
                     </columns>
                 </TableView>
-                <Button layoutX="14.0" layoutY="559.0" mnemonicParsing="false" text="Add Guest">
+                <Button fx:id="addGuestBtn" layoutX="14.0" layoutY="559.0" mnemonicParsing="false" onAction="#onClickaddGuest" text="Add Guest">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Button>
-                <Button layoutX="145.0" layoutY="559.0" mnemonicParsing="false" text="Edit Guest">
+                <Button fx:id="editGuestBtn" layoutX="145.0" layoutY="559.0" mnemonicParsing="false" onAction="#onClickEditGuest" text="Edit Guest">
                     <font>
                         <Font size="15.0" />
                     </font>
                 </Button>
-                <TextField layoutX="838.0" layoutY="16.0" promptText="First Name" />
+                <TextField fx:id="firstNameTxtfield" layoutX="838.0" layoutY="16.0" promptText="First Name" />
                 <Text layoutX="762.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search">
                     <font>
                         <Font size="22.0" />
