--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Main.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Main.fxml
@@ -3,37 +3,44 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="627.0" prefWidth="834.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.MainController">
    <children>
-      <VBox prefHeight="627.0" prefWidth="212.0" style="-fx-background-color: grey;">
-         <children>
-            <Label prefHeight="44.0" prefWidth="241.0" style="-fx-background-color: silver;" text="        Syria Hotel" textAlignment="CENTER">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </Label>
-            <Label />
-            <Button fx:id="Dashboard" mnemonicParsing="false" onAction="#openDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Dashboard">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="Zimmer" mnemonicParsing="false" onAction="#openZimmer" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Zimmer">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="Gäste" mnemonicParsing="false" onAction="#onClickOpenZimmerDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Gäste">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-         </children>
-      </VBox>
-      <Button fx:id="addBtn" layoutX="687.0" layoutY="560.0" mnemonicParsing="false" onAction="#addBtn" prefHeight="44.0" prefWidth="124.0" text="Add" />
+      <BorderPane fx:id="borderpane" layoutX="293.0" layoutY="52.0" prefHeight="627.2" prefWidth="834.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <left>
+            <VBox prefHeight="627.0" prefWidth="212.0" style="-fx-background-color: grey;" BorderPane.alignment="CENTER">
+               <children>
+                  <Label prefHeight="44.0" prefWidth="241.0" style="-fx-background-color: silver;" text="        Syria Hotel" textAlignment="CENTER">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Label>
+                  <Label />
+                  <Button fx:id="Dashboard" mnemonicParsing="false" onAction="#onClickOpenDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Dashboard">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="Zimmer" mnemonicParsing="false" onAction="#onClickOpenZimmerDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Zimmer">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="Gäste" mnemonicParsing="false" onAction="#onClickOpenGuestDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Gäste">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addBtn" prefHeight="62.0" prefWidth="212.0" style="-fx-background-color: orange;" text="Add">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Button>
+               </children>
+            </VBox>
+         </left>
+      </BorderPane>
    </children>
 </AnchorPane>
