--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Mitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Mitarbeiter.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="518.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.GuestsController">
+<AnchorPane prefHeight="518.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.MitarbeiterController">
     <children>
-        <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Guests">
+        <Text layoutX="57.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mitarbeiter">
             <font>
                 <Font size="16.0" />
             </font>
