--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addRoom.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addRoom.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.collections.FXCollections?>
+<?import java.lang.Integer?>
 <AnchorPane prefHeight="479.0" prefWidth="359.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddRoomController">
     <children>
         <Label layoutX="30.0" layoutY="26.0" prefHeight="27.0" prefWidth="103.0" text="New Room">
@@ -25,13 +27,28 @@
                 <Font size="14.0" />
             </font>
         </Label>
-        <ChoiceBox fx:id="floorChoiceBox" layoutX="40.0" layoutY="200.0" prefWidth="150.0" />
+        <ChoiceBox fx:id="floorChoiceBox" layoutX="40.0" layoutY="200.0" prefWidth="150.0" value="1">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <Integer fx:value="1" />
+                    <Integer fx:value="2" />
+                </FXCollections>
+            </items>
+        </ChoiceBox>
         <Label layoutX="52.0" layoutY="247.0" text="Area">
             <font>
                 <Font size="14.0" />
             </font>
         </Label>
-        <ChoiceBox fx:id="areaChoicheBox" layoutX="40.0" layoutY="279.0" prefWidth="150.0" />
+        <ChoiceBox fx:id="areaChoicheBox" layoutX="40.0" layoutY="279.0" prefWidth="150.0" value="50">
+            <items>
+                <FXCollections fx:factory="observableArrayList">
+                    <Integer fx:value="50" />
+                    <Integer fx:value="100" />
+                    <Integer fx:value="200" />
+                </FXCollections>
+            </items>
+        </ChoiceBox>
         <Label layoutX="38.0" layoutY="350.0" text="Cost">
             <font>
                 <Font size="14.0" />
