--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/newBooking.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/newBooking.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.newBookingController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.NewBookingController">
     <children>
         <AnchorPane prefHeight="511.0" prefWidth="776.0" style="-fx-background-color: C39746;">
             <children>
@@ -65,4 +65,3 @@
         </AnchorPane>
     </children>
 </VBox>
-<!-->
