--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/newBooking.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/newBooking.fxml
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.NewBookingController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="510.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.NewBookingController">
     <children>
         <AnchorPane prefHeight="511.0" prefWidth="776.0" style="-fx-background-color: C39746;">
             <children>
@@ -55,12 +50,7 @@
                     </font>
                 </Text>
                 <TextField fx:id="priceTxtfield" layoutX="16.0" layoutY="377.0" promptText="price" />
-                <Button fx:id="addBookingBtn" layoutX="16.0" layoutY="451.0" mnemonicParsing="false" onAction="#onClickAddBooking" text="Add booking" />
-                <Button fx:id="cancelProcessBtn" layoutX="277.0" layoutY="451.0" mnemonicParsing="false" onAction="#onClickCancelProccess" style="-fx-background-color: Black;" text="Cancel" textFill="#c93333">
-                    <font>
-                        <Font name="System Bold" size="12.0" />
-                    </font>
-                </Button>
+                <Button fx:id="addBookingBtn" layoutX="125.0" layoutY="452.0" mnemonicParsing="false" onAction="#onClickAddBooking" text="Add booking" />
             </children>
         </AnchorPane>
     </children>
