--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Main.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Main.fxml
@@ -19,7 +19,7 @@
                      </font>
                   </Label>
                   <Label />
-                  <Button fx:id="Dashboard" mnemonicParsing="false" onAction="#onClickOpenDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Dashboard">
+                  <Button fx:id="Buchung" mnemonicParsing="false" onAction="#onClickOpenBuchungDashboard" prefHeight="59.0" prefWidth="211.0" style="-fx-background-color: grey;" text="Buchungen">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -34,10 +34,6 @@
                         <Font size="18.0" />
                      </font>
                   </Button>
-                  <Button fx:id="addBtn" mnemonicParsing="false" onAction="#addBuchungBtn" prefHeight="62.0" prefWidth="212.0" style="-fx-background-color: orange;" text="Add">
-                     <font>
-                        <Font size="18.0" />
-                     </font></Button>
                </children>
             </VBox>
          </left>
