--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Mitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/Mitarbeiter.fxml
@@ -11,8 +11,8 @@
                 <Font size="16.0" />
             </font>
         </Text>
-        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="400.0" prefWidth="622.0" />
-        <Button fx:id="cancelBtn" layoutX="487.0" layoutY="34.0" mnemonicParsing="false" onAction="#onClickCancelBooking" prefHeight="25.0" prefWidth="77.0" text="Cancel" />
-        <ChoiceBox fx:id="bookingChoiceBox" layoutX="209.0" layoutY="34.0" prefWidth="150.0" />
+        <ListView fx:id="listView" layoutX="48.0" layoutY="90.0" prefHeight="363.0" prefWidth="622.0" />
+        <Button layoutX="48.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="26.0" prefWidth="102.0" style="-fx-cursor: HAND;" text="Add Mitarbeiter" />
+        <Button layoutX="245.0" layoutY="469.0" mnemonicParsing="false" onAction="#onClickDeleteMitarbeiter" prefHeight="26.0" prefWidth="78.0" text="Löschen" />
     </children>
 </AnchorPane>
