--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addGast.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addGast.fxml
@@ -44,7 +44,7 @@
             </font>
         </Label>
         <DatePicker fx:id="dateChooser" layoutX="217.0" layoutY="266.0" />
-        <Button fx:id="addGuestBtn" layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="31.0" prefWidth="222.0" text="Add Guest">
+        <Button layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddGuest" prefHeight="31.0" prefWidth="222.0" text="Add Guest">
             <font>
                 <Font size="15.0" />
             </font>
