--- a/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
+++ b/Prog3ProjektHotelReservierungsSystem/src/main/resources/com/example/prog3projekthotelreservierungssystem/addMitarbeiter.fxml
@@ -2,57 +2,56 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddMitarbeiterController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="418.0" style="-fx-background-color: #C39746;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.gui.AddMitarbeiterController">
     <children>
-        <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="381.0" prefWidth="632.0" style="-fx-background-color: C39746;" VBox.vgrow="ALWAYS">
-            <children>
-                <Text layoutX="20.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Add Employees" wrappingWidth="128.13671875">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <Text layoutX="20.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" wrappingWidth="128.13671875">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="lastNameTxtfield" layoutX="20.0" layoutY="89.0" />
-                <Text layoutX="345.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" wrappingWidth="128.13671875">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="firstNameTxtfield" layoutX="345.0" layoutY="89.0" />
-                <Text layoutX="20.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="email" wrappingWidth="128.13671875">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="emailTxtfield" layoutX="20.0" layoutY="165.0" />
-                <Text layoutX="20.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tel-Number" wrappingWidth="128.13671875">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <TextField fx:id="telefonNrTxtfield" layoutX="20.0" layoutY="252.0" />
-                <Text layoutX="345.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="birth date" wrappingWidth="128.13671875">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Text>
-                <Button fx:id="addMitarbeiterBtn" layoutX="535.0" layoutY="329.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" text="Add ">
-                    <font>
-                        <Font size="22.0" />
-                    </font>
-                </Button>
-            <DatePicker fx:id="dateChooser" layoutX="345.0" layoutY="165.0" prefHeight="26.0" prefWidth="150.0" />
-            </children>
-        </AnchorPane>
+        <Label layoutX="45.0" layoutY="23.0" text="Add Guest">
+            <font>
+                <Font size="25.0" />
+            </font>
+        </Label>
+        <Label layoutX="48.0" layoutY="107.0" text="First Name">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Label layoutX="259.0" layoutY="107.0" text="Last Name">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Label layoutX="61.0" layoutY="215.0" text="Email">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Label layoutX="42.0" layoutY="326.0" text="Tel-number">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <TextField fx:id="firstNameTxtfield" layoutX="29.0" layoutY="152.0" promptText="First Name" />
+        <TextField fx:id="lastNameTxtfield" layoutX="229.0" layoutY="152.0" promptText="Last Name" />
+        <TextField fx:id="emailTxtfield" layoutX="24.0" layoutY="266.0" promptText="name@example.com" />
+        <DatePicker fx:id="dateChooser" layoutX="217.0" layoutY="266.0" />
+        <TextField fx:id="telefonNrTxtfield" layoutX="24.0" layoutY="382.0" promptText="Tel-number" />
+        <Label layoutX="271.0" layoutY="215.0" text="B-date">
+            <font>
+                <Font size="14.0" />
+            </font>
+        </Label>
+        <Button layoutX="98.0" layoutY="491.0" mnemonicParsing="false" onAction="#onClickAddMitarbeiter" prefHeight="31.0" prefWidth="222.0" text="Add Mitarbeiter">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Button>
+        <Label fx:id="errorLabel" alignment="CENTER" layoutX="6.0" layoutY="77.0" prefHeight="18.0" prefWidth="406.0" textFill="#ff0900">
+            <font>
+                <Font size="16.0" />
+            </font></Label>
     </children>
-</VBox>
+</AnchorPane>
